# TextScape

./: .gitignore  .project  README  README.md  TextScape.cabal  TextScape_paper_src.org  index.html  server.rb  stdlib.ts  test.ts
code/: shell.rb
code/src/Interpreter/: Parser.hs
html/: index.html
src/: Main.hs
src/Interpreter/: Data.hs  Eval.hs  Kernel.hs  Parser.hs  Util.hs
